create color picker

--- a/index.html
+++ b/index.html
@@ -26,12 +26,13 @@
                     Size:
                     <select id="size-selector">
                         <option value="3">Regular</option>
-                        <option value="2">Dmall</option>
+                        <option value="2">Small</option>
                         <option value="4">Normal</option>
                         <option value="5">Big</option>
                         <option value="6">Huge</option>
                     </select>
                 </label>
+                <input type="color" id="color-selector" value="#000000">
                 <button type="button" class="btn" data-element="bold">
                     <i class="fa fa-bold"></i>
                 </button>
